--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "purescript-transformers": ">= 3.0.0 < 5.0.0",
     "purescript-tuples": ">= 4.0.0 < 6.0.0",
     "purescript-type-equality": ">= 1.0.0 < 4.0.0",
-    "purescript-unsafe-coerce": ">= 1.0.0 < 5.0.0"
+    "purescript-unsafe-coerce": ">= 1.0.0 < 5.0.0",
+    "purescript-debug": "^4.0.0"
   },
   "devDependencies": {
     "purescript-aff": ">= 5.0.0 < 6",
